--- a/publications.html
+++ b/publications.html
@@ -129,18 +129,18 @@ body::-webkit-scrollbar-thumb:hover {
 <body>
   <div class="articles">
     <h2>[*] Publications</h2>
-    <div class="article">
+    <div class="articles">
       <a href="/posts/hacking-meatmeet.html">Let Him Cook! Hacking the Meatmeet BBQ Probe</a><br>
       <span>// A three-part blog series detailing the reverse engineering of the Meatmeet BBQ probe devices and mobile application resulting in the identification of vulnerabilities and building a BLE BBQ Botnet.</span>
     </div>
       <a href="/posts/hacking-furbo.html">Hacking Furbo: A Pet Project</a><br>
       <span>// A six-part blog series detailing the reverse engineering of the Furbo devices and mobile application resulting in the identification of nearly two dozen vulnerabilities.</span>
     </div>
-    <div class="article">
+    <div class="articles">
       <a href="https://www.404media.co/grok-exposes-underlying-prompts-for-its-ai-personas-even-putting-things-in-your-ass/">Grok Exposes Underlying Prompts for Its AI Personas: ‘EVEN PUTTING THINGS IN YOUR ASS’</a><br>
       <span>// The website for Elon Musk's Grok is exposing prompts for its anime girl, therapist, and conspiracy theory AI personas.</span>
     </div>
-    <div class="article">
+    <div class="article"s>
       <a href="https://www.404media.co/more-than-130-000-claude-grok-chatgpt-and-other-llm-chats-readable-on-archive-org/">More than 130,000 Claude, Grok, ChatGPT, and Other LLM Chats Readable on Archive.org</a><br>
       <span>// The issue of publicly saving shared LLM chats is bigger than just Google.</span>
     </div>
