--- a/blogs.html
+++ b/blogs.html
@@ -129,6 +129,10 @@ body::-webkit-scrollbar-thumb:hover {
 <body>
    <div class="articles">
     <h2>[*] All Posts</h2>
+     <div class="article">
+     <a href="/posts/hacking-meatmeet.html">Let Him Cook! Hacking the Meatmeet BBQ Probe</a><br>
+      <span>// A three-part blog series detailing the reverse engineering of the Meatmeet BBQ probe devices and mobile application resulting in the identification of vulnerabilities and building a BLE BBQ Botnet.</span>
+    </div>
         <div class="article">
       <a href="https://www.softwaresecured.com/post/hacking-furbo-a-hardware-research-project-part-1-acquiring-the-hardware">Hacking Furbo—A Hardware Research Project—Part 1: Acquiring the Hardware</a><br>
       <span>// In mid-March our research team began looking for a target to assess as part of a long-term project. After some time searching, we set our sights on Furbo. Tomofun, the creators of Furbo, offers two devices which you can set up in your home to monitor your pet's activities throughout the day and, with the higher-end Furbo 360, toss treats their way, send voice messages, and monitor their activities more thoroughly.</span>
