--- a/publications.html
+++ b/publications.html
@@ -133,6 +133,7 @@ body::-webkit-scrollbar-thumb:hover {
       <a href="/posts/hacking-meatmeet.html">Let Him Cook! Hacking the Meatmeet BBQ Probe</a><br>
       <span>// A three-part blog series detailing the reverse engineering of the Meatmeet BBQ probe devices and mobile application resulting in the identification of vulnerabilities and building a BLE BBQ Botnet.</span>
     </div>
+    <div class="article">
       <a href="/posts/hacking-furbo.html">Hacking Furbo: A Pet Project</a><br>
       <span>// A six-part blog series detailing the reverse engineering of the Furbo devices and mobile application resulting in the identification of nearly two dozen vulnerabilities.</span>
     </div>
