--- a/index.html
+++ b/index.html
@@ -140,27 +140,15 @@ body::-webkit-scrollbar-thumb:hover {
   <div class="articles">
     <h2>[*] Recent Posts</h2>
     <div class="article">
-      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe---part-1">Hacking the Meatmeet BBQ Probe — Part 1</a><br>
+      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe---part-1">Let Him Cook! Hacking the Meatmeet BBQ Probe—Part 1</a><br>
       <span>// We dismantled the Meatmeet Pro, monitored its BLE and network activity, and dumped the ESP32 flash for analysis.</span>
     </div>
     <div class="article">
-      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe---part-2">Hacking the Meatmeet BBQ Probe — Part 2/a><br>
+      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe---part-2">Let Him Cook! Hacking the Meatmeet BBQ Probe—Part 2</a><br>
       <span>// We break down the Meatmeet Android app and find a number of vulnerabilities including: hard coded credentials, insecure memory management, and an open storage bucket.</span>
     </div>
     <div class="article">
-      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe3">Hacking the Meatmeet BBQ Probe — Part 3</a><br>
-      <span>// We uncover BLE flaws in the Meatmeet BBQ probe that allowed us to take over the device, push malicious firmware, and even build a BLE BBQ Probe botnet.</span>
-    </div>
-    <div class="article">
-      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe---part-1">Hacking the Meatmeet BBQ Probe — Part 1</a><br>
-      <span>// We dismantled the Meatmeet Pro, monitored its BLE and network activity, and dumped the ESP32 flash for analysis.</span>
-    </div>
-    <div class="article">
-      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe---part-2">Hacking the Meatmeet BBQ Probe — Part 2/a><br>
-      <span>// We break down the Meatmeet Android app and find a number of vulnerabilities including: hard coded credentials, insecure memory management, and an open storage bucket.</span>
-    </div>
-    <div class="article">
-      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe3">Hacking the Meatmeet BBQ Probe — Part 3</a><br>
+      <a href="https://www.softwaresecured.com/post/hacking-the-meatmeet-bbq-probe3">Let Him Cook! Hacking the Meatmeet BBQ Probe—Part 3</a><br>
       <span>// We uncover BLE flaws in the Meatmeet BBQ probe that allowed us to take over the device, push malicious firmware, and even build a BLE BBQ Probe botnet.</span>
     </div>
         <div class="article">
