--- a/blogs.html
+++ b/blogs.html
@@ -132,6 +132,18 @@ body::-webkit-scrollbar-thumb:hover {
      <div class="article">
      <a href="/posts/hacking-meatmeet.html">Let Him Cook! Hacking the Meatmeet BBQ Probe</a><br>
       <span>// A three-part blog series detailing the reverse engineering of the Meatmeet BBQ probe devices and mobile application resulting in the identification of vulnerabilities and building a BLE BBQ Botnet.</span>
+    </div>        
+     <div class="article">
+      <a href="https://www.softwaresecured.com/post/hacking-furbo-a-hardware-research-project-part-1-acquiring-the-hardware">Hacking Furbo—A Hardware Research Project—Part 1: Acquiring the Hardware</a><br>
+      <span>// In mid-March our research team began looking for a target to assess as part of a long-term project. After some time searching, we set our sights on Furbo. Tomofun, the creators of Furbo, offers two devices which you can set up in your home to monitor your pet's activities throughout the day and, with the higher-end Furbo 360, toss treats their way, send voice messages, and monitor their activities more thoroughly.</span>
+    </div>
+    <div class="article">
+      <a href="https://www.softwaresecured.com/post/hacking-furbo-a-hardware-research-project-part-2-mobile-and-p2p-exploits">Hacking Furbo—A Hardware Research Project–Part 2: Mobile and P2P Exploits</a><br>
+      <span>// In the second part of our Hacking Furbo blog series we will focus on the mobile application and P2P communications from it. We will detail our process of identifying the mobile-side of the P2P communications and hooking them with Frida for a deeper understanding of how they work.</span>
+    </div>
+        <div class="article">
+      <a href="https://www.softwaresecured.com/post/hacking-furbo-a-hardware-research-project-part-3-chip-off-and-persistence">Hacking Furbo—A Hardware Research Project—Part 3: Chip Off and Persistence </a><br>
+      <span>// In this third part of our Hacking Furbo blog series we will focus on the Furbo hardware; specifically our attempts at performing a chip off procedure on the device in order to dump and re-apply our own customized firmware. We will detail how we used the XGecu T48 programmer for the firmware extraction, our struggles to get the correct adapter, and our sad attempt at using a Probe Reader to avoid performing a chip off procedure.</span>
     </div>
         <div class="article">
       <a href="https://www.softwaresecured.com/post/hacking-furbo-a-hardware-research-project-part-4-debugging-deviceids-and-dev-tools">Hacking Furbo—A Hardware Research Project—Part 4: Debugging, DeviceIDs, and Dev Tools</a><br>
@@ -142,7 +154,7 @@ body::-webkit-scrollbar-thumb:hover {
       <span>// This post examines Furbo’s Bluetooth Low Energy (BLE) communication, finding vulnerabilities that expose Wi-Fi credentials, enable device resets, and reveal hidden GATT characteristics. The team demonstrates how attackers could hijack video streams or re-register devices.</span>
     </div>
         <div class="article">
-      <a href="">Hacking Furbo—A Hardware Research Project—Part 6: The Finale</a><br>
+      <a href="https://www.softwaresecured.com/post/hacking-furbo-a-hardware-research-project-part-6-the-finale">Hacking Furbo—A Hardware Research Project—Part 6: The Finale</a><br>
       <span>// Final chapter: insecure Wi-Fi credentials, risky S3 log uploads, long-lived device tokens, and global MQTT activity exposure, plus our June 23, 2025 disclosure to Tomofun.</span>
     </div>
         <div class="article">
